bpk-lib/crates/macbat/macros/tests/trybuild_negative/subscription_on_unit_struct.stderr
error: expected a named-field struct
 --> tests/trybuild_negative/subscription_on_unit_struct.rs:5:8
  |
5 | struct S;
  |        ^
