bpk-lib/crates/macbat/macros/tests/trybuild_negative/subscription_on_unit_struct.rs
use macbat::Subscription;
#[derive(Subscription)]
#[batpak(input = JsonValueInput, error = StoreError)]
#[batpak(event = Ev, handler = on_ev)]
struct S;
fn main() {}
